--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Dank Meme</h1>
-							<p>Solving worlk hunger with Memes</p>
+							<p>Solving world hunger with Memes</p>
 						</header>
 						<!--
 						<hr />
